WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187142
REGRESSION (
r232040
): Cursor jumping in Safari text fields
https://bugs.webkit.org/show_bug.cgi?id=187142
Summary
REGRESSION (r232040): Cursor jumping in Safari text fields
Aditya Keerthi
Reported
2018-06-28 09:11:12 PDT
Summary: If you then tap at various points in an editable node with text, the cursor jumps. Steps to reproduce: 1. Navigate to reddit.com 2. Sign in and begin a new post 3. Enter some text for the post title 4. Tap at various points in the input field Regression: This is a regression caused by
r232040
, which enabled click events on nodes that are already being edited (iOS).
Attachments
Patch
(6.12 KB, patch)
2018-06-28 09:24 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2018-06-28 09:12:08 PDT
<
rdar://problem/41397577
>
Aditya Keerthi
Comment 2
2018-06-28 09:24:10 PDT
Created
attachment 343810
[details]
Patch
WebKit Commit Bot
Comment 3
2018-06-28 10:12:12 PDT
Comment on
attachment 343810
[details]
Patch Clearing flags on attachment: 343810 Committed
r233311
: <
https://trac.webkit.org/changeset/233311
>
WebKit Commit Bot
Comment 4
2018-06-28 10:12:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug